<resources>
    <string name="app_name">My Avon\nOrder List</string>
    <string name="action_settings">Settings</string>
    <string name="new_campaign">NEW CAMPAIGN</string>
    <string name="n_campaign">Campaign Number</string>
    <string name="end_campaign">End of Campaign</string>
    <string name="create">CREATE</string>
    <string name="clear">CLEAR</string>
    <string name="campaign">Campaign</string>
    <string name="title_activity_clients_list">Clients List</string>
    <string name="camp_success_msg">Campaign created sucessfully!</string>
</resources>